# Perkelang

./: .gitignore  Makefile  README.md  autorun.sh  dune-project  flake.nix  lambdaheapconcept copy.c  lambdaheapconcept.c  package-lock.json  package.json  perkelang.opam  typeclass_concept.c  typeclass_concept2.c
lib/: ast.ml  c_symbols.ml  codegen.ml  dune  errors.ml  free_variables.ml  lambda_env_AI_unifier.ml  lexer.ml  location.ml  parser.mly  symbol_table.ml  type_symbol_table.ml  typecheck.ml  utils.ml  var_symbol_table.ml
perkelang-extension/: README.md  make_ext.sh  package.json  perkelang-syntax-0.0.1.vsix  perkelang.tmLanguage.json
perkelang-extension/syntaxes/: perkelang.tmLanguage.json
perkelang-vscode-lsp/: language-configuration.json  package-lock.json  package.json  perkelang-vscode-lsp-1.0.0.vsix  tsconfig.json
perkelang-vscode-lsp/src/: extension.ts
test/: calculator.perk  dune  metaperk.perk  test.perk  test2.perk  test3.perk
test/normalexec/: 01-hello_world.perk  02-lambda.perk  03-lambda_model.perk  04-model_constructor_type.c  04-model_constructor_type.expected  04-model_constructor_type.perk  05-model_constructor_assign_function copy.c  05-model_constructor_assign_function.c  05-model_constructor_assign_function.expected  05-model_constructor_assign_function.perk  06-lambda_of_lambda.c  06-lambda_of_lambda.perk  07-int_list.perk  08-drawable_list.expected  08-drawable_list.perk  09.capture_list_overapprox.c  09.capture_list_overapprox.expected  09.capture_list_overapprox.perk  10-empty_return.perk  11-ifthenelse_expression.perk  a.out  (+17 more)
